--- a/inst/tutorials/tut-03/tut-03.Rmd
+++ b/inst/tutorials/tut-03/tut-03.Rmd
@@ -14,7 +14,7 @@ library(learnr)
 library(learnrhash)
 library(tidyverse)
 gradethis::gradethis_setup()
-library(qmir22)
+library(qmir22gr)
 
 ## Data
 data(ep_elections)
