--- a/inst/tutorials/tut-04/tut-04.Rmd
+++ b/inst/tutorials/tut-04/tut-04.Rmd
@@ -16,7 +16,7 @@ gradethis::gradethis_setup(exercise.reveal_solution = FALSE)
 library(tidyverse)
 library(broom)
 library(texreg)
-library(qmir22)
+library(qmir22gr)
 
 data(df_opposition) 
 ```
