--- a/inst/tutorials/tut-05/tut-05.Rmd
+++ b/inst/tutorials/tut-05/tut-05.Rmd
@@ -16,7 +16,7 @@ gradethis::gradethis_setup()
 library(tidyverse)
 library(broom)
 library(texreg)
-library(qmir22)
+library(qmir22gr)
 
 data(df_opposition) 
 ```
