--- a/inst/tutorials/tut-06/tut-06.Rmd
+++ b/inst/tutorials/tut-06/tut-06.Rmd
@@ -17,7 +17,7 @@ library(tidyverse)
 library(broom)
 library(texreg)
 library(margins)
-library(qmir22)
+library(qmir22gr)
 
 data(df_brexit) 
 data(df_opposition)
