--- a/inst/tutorials/tut-07/tut-07.Rmd
+++ b/inst/tutorials/tut-07/tut-07.Rmd
@@ -17,7 +17,7 @@ library(highlight)
 library(gradethis)
 library(texreg)
 library(tidyverse)
-library(qmir22)
+library(qmir22gr)
 
 gradethis:: gradethis_setup()
 
