--- a/inst/tutorials/tut-05/tut-05.Rmd
+++ b/inst/tutorials/tut-05/tut-05.Rmd
@@ -305,6 +305,6 @@ learnrhash::encoder_logic(strip_output = TRUE)
 ```
 
 ```{r encode, echo=FALSE}
-learnrhash::encoder_ui(default_ui(url = ""))
+learnrhash::encoder_ui(default_ui(url = "https://ilias.uni-mannheim.de/goto.php?target=svy_1233630&client_id=ILIAS"))
 ```
 
