--- a/inst/tutorials/tut-02/tut-02.Rmd
+++ b/inst/tutorials/tut-02/tut-02.Rmd
@@ -489,5 +489,5 @@ learnrhash::encoder_logic()
 ```
 
 ```{r encode, echo=FALSE}
-learnrhash::encoder_ui(default_ui(url = ""))
+learnrhash::encoder_ui(default_ui(url = "https://ilias.uni-mannheim.de/goto.php?target=svy_1233619&client_id=ILIAS"))
 ```
