--- a/inst/tutorials/tut-04/tut-04.Rmd
+++ b/inst/tutorials/tut-04/tut-04.Rmd
@@ -557,7 +557,7 @@ learnrhash::encoder_logic(strip_output = TRUE)
 ```
 
 ```{r encode, echo=FALSE}
-learnrhash::encoder_ui(default_ui(url = ""))
+learnrhash::encoder_ui(default_ui(url = "https://ilias.uni-mannheim.de/goto.php?target=svy_1233629&client_id=ILIAS"))
 ```
 
 
