--- a/inst/tutorials/tut-06/tut-06.Rmd
+++ b/inst/tutorials/tut-06/tut-06.Rmd
@@ -424,6 +424,6 @@ learnrhash::encoder_logic(strip_output = TRUE)
 ```
 
 ```{r encode, echo=FALSE}
-learnrhash::encoder_ui(default_ui(url = ""))
+learnrhash::encoder_ui(default_ui(url = "https://ilias.uni-mannheim.de/goto.php?target=svy_1233631&client_id=ILIAS"))
 ```
 
