--- a/inst/tutorials/tut-07/tut-07.Rmd
+++ b/inst/tutorials/tut-07/tut-07.Rmd
@@ -455,5 +455,5 @@ learnrhash::encoder_logic(strip_output = TRUE)
 ```
 
 ```{r encode, echo=FALSE}
-learnrhash::encoder_ui(default_ui(url = ""))
+learnrhash::encoder_ui(default_ui(url = "https://ilias.uni-mannheim.de/goto.php?target=svy_1233632&client_id=ILIAS"))
 ```
